syntax = "proto3";

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "google/protobuf/any.proto";
import "palomachain/paloma/valset/common.proto";
import "google/protobuf/empty.proto";

package palomachain.paloma.consensus;

option go_package = "github.com/palomachain/paloma/v2/x/consensus/types";

// Msg defines the Msg service.
service Msg {
  rpc AddMessagesSignatures(MsgAddMessagesSignatures)
      returns (MsgAddMessagesSignaturesResponse);
  rpc AddMessageEstimates(MsgAddMessageGasEstimates)
      returns (google.protobuf.Empty);
  rpc AddEvidence(MsgAddEvidence) returns (MsgAddEvidenceResponse);
  rpc SetPublicAccessData(MsgSetPublicAccessData)
      returns (MsgSetPublicAccessDataResponse);
  rpc SetErrorData(MsgSetErrorData) returns (MsgSetErrorDataResponse);
}

message MsgAddMessagesSignatures {
  option (cosmos.msg.v1.signer) = "metadata";
  reserved 1;  
  reserved "creator";  
  repeated ConsensusMessageSignature signedMessages = 2;
  palomachain.paloma.valset.MsgMetadata metadata = 3
      [ (gogoproto.nullable) = false ];
}

message ConsensusMessageSignature {
  uint64 id = 1;
  string queueTypeName = 2;
  bytes signature = 3;
  string signedByAddress = 5;
}

message MsgAddMessagesSignaturesResponse {}

message MsgAddEvidence {
  option (cosmos.msg.v1.signer) = "metadata";
  reserved 1;  
  reserved "creator";  
  google.protobuf.Any proof = 2;
  uint64 messageID = 3;
  string queueTypeName = 4;
  palomachain.paloma.valset.MsgMetadata metadata = 5
      [ (gogoproto.nullable) = false ];
}

message MsgAddEvidenceResponse {}

message MsgSetPublicAccessData {
  option (cosmos.msg.v1.signer) = "metadata";
  reserved 1;  
  reserved "creator";  
  uint64 messageID = 2;
  string queueTypeName = 3;
  bytes data = 4;
  palomachain.paloma.valset.MsgMetadata metadata = 5
      [ (gogoproto.nullable) = false ];
  uint64 valsetID = 6;
}

message MsgSetPublicAccessDataResponse {}

message MsgSetErrorData {
  option (cosmos.msg.v1.signer) = "metadata";
  reserved 1;  
  reserved "creator";  
  uint64 messageID = 2;
  string queueTypeName = 3;
  bytes data = 4;
  palomachain.paloma.valset.MsgMetadata metadata = 5
      [ (gogoproto.nullable) = false ];
}

message MsgSetErrorDataResponse {}

message MsgAddMessageGasEstimates {
  message GasEstimate {
    uint64 msg_id = 1;
    string queueTypeName = 2;
    uint64 value = 3;
    string estimatedByAddress = 5;
  }
  option (cosmos.msg.v1.signer) = "metadata";
  palomachain.paloma.valset.MsgMetadata metadata = 1
      [ (gogoproto.nullable) = false ];

  repeated GasEstimate estimates = 2;
}

