syntax = "proto3";
package palomachain.paloma.valset;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/palomachain/paloma/x/valset/types";

message Validator {
  bytes shareCount = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  ValidatorState state = 2;

  repeated ExternalChainInfo externalChainInfos = 3;

  bytes address = 4 [ (gogoproto.casttype) =
                          "github.com/cosmos/cosmos-sdk/types.ValAddress" ];
}

message ValidatorExternalAccounts {
  bytes address = 1 [ (gogoproto.casttype) =
                          "github.com/cosmos/cosmos-sdk/types.ValAddress" ];
  repeated ExternalChainInfo ExternalChainInfo = 2;
}

message Snapshot {
  uint64 id = 1;
  int64 height = 2;

  repeated Validator validators = 3 [ (gogoproto.nullable) = false ];

  bytes totalShares = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  google.protobuf.Timestamp createdAt = 5
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];

  repeated string chains = 6;
}

message ExternalChainInfo {
  string chainType = 1;
  string chainReferenceID = 2;
  string address = 3;
  bytes pubkey = 4;

  string balance = 5;
  repeated string traits = 6;
}

enum ValidatorState {
  NONE = 0;
  ACTIVE = 1;
  JAILED = 2;
}
